posiGen_FullsendBox/src/objects/Change_Request__c.object
<CustomObject>
    <fields>
        <fullName>Age__c</fullName>
        <formula>TODAY()  -  DATEVALUE( CreatedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approved_On__c</fullName>
        <label>Approved On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Change_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assignee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The administrator assigned to complete this task</description>
        <label>Assignee</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>Contact.Account.Name</field>
                <operation>startsWith</operation>
                <value>Susco</value>
            </filterItems>
            <filterItems>
                <field>Contact.Account.Name</field>
                <operation>equals</operation>
                <value>Technology</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Change Requests</relationshipLabel>
        <relationshipName>Change_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CRID__c</fullName>
        <displayFormat>CR-{00000}</displayFormat>
        <label>CRID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Change_Request_Merged_With__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Fill this out if the CR is being closed b/c it&apos;s being handled in a different CR.</inlineHelpText>
        <label>Change Request Merged With</label>
        <referenceTo>Change_Request__c</referenceTo>
        <relationshipLabel>Change Requests Merged With This One</relationshipLabel>
        <relationshipName>Change_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Change_Request_Type__c</fullName>
        <label>Change Request Type</label>
        <picklist>
            <picklistValues>
                <fullName>New Feature Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field/Object Access &amp; Permission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Report Creation/Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PM Tool Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Box Permission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pricebook Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bug/Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>User License Needed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Notifications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Access to Salesforce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Cleanup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>API Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VisualForce Page</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Closing_Comment__c</fullName>
        <label>Closing Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Creater_Profile__c</fullName>
        <formula>CreatedBy.Profile.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Creater Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Creator_Role__c</fullName>
        <formula>CreatedBy.UserRole.RollupDescription</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Creator Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Allowed_to_Start__c</fullName>
        <label>Date Allowed to Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deadline__c</fullName>
        <label>Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deployed_Date__c</fullName>
        <label>Deployed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deployment_Plan__c</fullName>
        <label>Deployment Plan</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description_of_Change__c</fullName>
        <label>Description of Change</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Email_Source__c</fullName>
        <inlineHelpText>You can copy a whole email chain that this originated on here.</inlineHelpText>
        <label>Email Source</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>How_Is_This_Function_Currently_Performed__c</fullName>
        <label>How Is This Function Currently Performed</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Labor_Estimate_Worst_Case__c</fullName>
        <label>Labor Estimate Worst Case</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Labor_Estimate__c</fullName>
        <label>Labor Estimate Best Case</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Material_Estimate__c</fullName>
        <label>Material Estimate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Objects_Affected__c</fullName>
        <label>Objects Affected</label>
        <picklist>
            <picklistValues>
                <fullName>Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy Efficiency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Profile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Property</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Role</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Use Cases</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>User</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Other_Objects_Affected__c</fullName>
        <label>Other Objects Affected</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Planned_Release__c</fullName>
        <label>Planned Release</label>
        <picklist>
            <picklistValues>
                <fullName>TBD</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>SF2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SF2.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SF3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Planned_Start_Date__c</fullName>
        <inlineHelpText>To help admins plan performing the CR work.</inlineHelpText>
        <label>Planned Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <inlineHelpText>URGENT 
The company is losing money by not having this completed.  There are no work-arounds.
HIGH
It&apos;s stopping you from doing your job
MEDIUM
would help some
LOW
nice to have, losing a couple minutes / day until it’s done</inlineHelpText>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>URGENT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Reference__c</fullName>
        <inlineHelpText>If the CR is related to an existing or upcoming project, specify the project/initiative name</inlineHelpText>
        <label>Project Reference</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_for_Change__c</fullName>
        <label>Reason for Change</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Request_That_I_self_perform__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Request That I self-perform</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sign_Off_Date__c</fullName>
        <label>Sign Off Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status_Date__c</fullName>
        <defaultValue>today()</defaultValue>
        <label>Status Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status_Notes__c</fullName>
        <label>Status Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Submitted</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Grooming</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Estimation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Backlog</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sprint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Testing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deployed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Merged with Another Change Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referred to a Project</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Technology_Vendor__c</fullName>
        <label>Technology Vendor</label>
        <picklist>
            <picklistValues>
                <fullName>Susco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BigKite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zydeco Digital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appcino</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Time_in_Status__c</fullName>
        <formula>today() - Status_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time in Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_to_Close__c</fullName>
        <formula>Status_Date__c -DATEVALUE(CreatedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time to Close</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Change Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Priority__c</columns>
        <columns>Change_Request_Type__c</columns>
        <columns>NAME</columns>
        <columns>Description_of_Change__c</columns>
        <columns>Status__c</columns>
        <columns>Age__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Change_Requests_in_Progress</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Under Review,In Progress</value>
        </filters>
        <label>Change Requests in Progress</label>
    </listViews>
    <listViews>
        <fullName>Completed_Change_Requests</fullName>
        <columns>CREATEDBY_USER</columns>
        <columns>NAME</columns>
        <columns>Change_Request_Type__c</columns>
        <columns>Description_of_Change__c</columns>
        <columns>Assignee__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Complete</value>
        </filters>
        <label>Completed Change Requests</label>
        <sharedTo>
            <group>System_Admins</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Icebox</fullName>
        <columns>CRID__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Priority__c</columns>
        <columns>NAME</columns>
        <columns>Material_Estimate__c</columns>
        <columns>Labor_Estimate__c</columns>
        <columns>Labor_Estimate_Worst_Case__c</columns>
        <columns>Planned_Start_Date__c</columns>
        <columns>Planned_Release__c</columns>
        <columns>Assignee__c</columns>
        <columns>Age__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Hold</value>
        </filters>
        <label>CR on Hold</label>
    </listViews>
    <listViews>
        <fullName>Open_Change_Requests</fullName>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>NAME</columns>
        <columns>Assignee__c</columns>
        <columns>Change_Request_Type__c</columns>
        <columns>Priority__c</columns>
        <columns>Creator_Role__c</columns>
        <columns>Objects_Affected__c</columns>
        <columns>Other_Objects_Affected__c</columns>
        <columns>Status__c</columns>
        <columns>Age__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Submitted,Grooming,Estimation,Awaiting Approval,Backlog,Sprint,Testing</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>,Change_Request__c.Salesforce_CR</value>
        </filters>
        <label>Open CR with Age</label>
        <sharedTo>
            <group>System_Admins</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Open_Change_Requests_With_Description</fullName>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Change_Request_Type__c</columns>
        <columns>Assignee__c</columns>
        <columns>Priority__c</columns>
        <columns>Status__c</columns>
        <columns>Description_of_Change__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Submitted,Grooming,Estimation,Awaiting Approval,Backlog,Sprint,Testing</value>
        </filters>
        <label>Open Change Requests with Description</label>
        <sharedTo>
            <group>System_Admins</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Open_Change_Requests_this_Week</fullName>
        <booleanFilter>(1 OR 2 OR 3 OR 4) AND 5</booleanFilter>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Priority__c</columns>
        <columns>Description_of_Change__c</columns>
        <columns>Status__c</columns>
        <columns>Objects_Affected__c</columns>
        <columns>Other_Objects_Affected__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Submitted</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>In Progress</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>In Sandbox</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>Open Change Requests this Week</label>
        <sharedTo>
            <group>System_Admins</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Open_New_User_Requests</fullName>
        <columns>NAME</columns>
        <columns>Planned_Start_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Priority__c</columns>
        <columns>Change_Request_Type__c</columns>
        <columns>Objects_Affected__c</columns>
        <columns>Other_Objects_Affected__c</columns>
        <columns>Status__c</columns>
        <columns>Description_of_Change__c</columns>
        <columns>Assignee__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Submitted,Approved,In Progress,In Sandbox,Under Review</value>
        </filters>
        <filters>
            <field>Change_Request_Type__c</field>
            <operation>equals</operation>
            <value>User License Needed</value>
        </filters>
        <label>Open New User Requests</label>
        <sharedTo>
            <group>System_Admins</group>
            <role>Executive</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Open_Urgent_Change_Requests</fullName>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Priority__c</columns>
        <columns>NAME</columns>
        <columns>Description_of_Change__c</columns>
        <columns>Assignee__c</columns>
        <columns>Change_Request_Type__c</columns>
        <columns>Objects_Affected__c</columns>
        <columns>Other_Objects_Affected__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Submitted,Approved,In Progress,In Sandbox,Under Review</value>
        </filters>
        <filters>
            <field>Priority__c</field>
            <operation>equals</operation>
            <value>High,URGENT</value>
        </filters>
        <label>Open Urgent Change Requests</label>
        <sharedTo>
            <group>System_Admins</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>PV_Assessment_Field_Additions</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <label>PV Assessment Field Additions</label>
    </listViews>
    <listViews>
        <fullName>Submitted_Change_Requests</fullName>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Assignee__c</columns>
        <columns>Change_Request_Type__c</columns>
        <columns>Age__c</columns>
        <columns>Priority__c</columns>
        <columns>Creator_Role__c</columns>
        <columns>Objects_Affected__c</columns>
        <columns>Other_Objects_Affected__c</columns>
        <columns>CRID__c</columns>
        <columns>Description_of_Change__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Submitted</value>
        </filters>
        <label>Submitted Change Requests</label>
        <sharedTo>
            <group>System_Admins</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Technology_Projects</fullName>
        <columns>NAME</columns>
        <columns>Change_Request_Type__c</columns>
        <columns>Description_of_Change__c</columns>
        <columns>Status__c</columns>
        <columns>Priority__c</columns>
        <columns>Technology_Vendor__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Change_Request__c.Tech_Projects</value>
        </filters>
        <label>Technology Projects</label>
        <sharedTo>
            <group>System_Admins</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Change Request Descriptive Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Change Requests</pluralLabel>
    <recordTypes>
        <fullName>Salesforce_CR</fullName>
        <active>true</active>
        <description>Salesforce Change Requests</description>
        <label>Salesforce CR</label>
    </recordTypes>
    <recordTypes>
        <fullName>Tech_Projects</fullName>
        <active>true</active>
        <description>Technology Projects</description>
        <label>Tech Projects</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>